# pyreact

./: .gitignore  README_MESSAGE.md  SETUP.md  components.py  core.py  hook.py  input_dispatcher.py  log.py  main.py  main_app.py  main_terminal.py  main_web.py  message.py  provider.py  pyproject.toml  router.py  router_agent.py  runtime.py
integrations/: dspy_integration.py  use_dspy.py
pyreact/: __init__.py
pyreact/boot/: __init__.py  app.py  app_runner.py  bootstrap.py  terminal.py  web.py
pyreact/components/: keystroke.py
pyreact/core/: __init__.py  core.py  debug.py  hook.py  message_buffer.py  provider.py  runtime.py  web_renderer.py
pyreact/input/: bus.py  focus.py
pyreact/input/providers/: terminal.py
pyreact/router/: __init__.py  match.py  nav_service.py  route.py  router.py
pyreact/web/: ansi.py  broadcast.py  console.py  input_consumer.py  nav_service.py  render_loop.py  renderer.py  server.py  state.py  templates.py  ws_endpoint.py
pyreact/web/static/: app.js  base.html
