[tool.poetry]
name = "pyreact"
version = "0.1.0"
description = ""
authors = ["Edmar Miyake <edmar.miyake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
dspy = { version = "^3.0.1", python = ">=3.11,<3.14" }
fastapi = {extras = ["standard"], version = "^0.116.1"}
watchgod = "^0.8.2"
nicegui = "^2.21.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
