[tool.poetry]
authors = ["Edmar Miyake <edmar.miyake@gmail.com>"]
description = ""
name = "pyreact"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dspy = { version = "^3.0.1", python = ">=3.11,<3.14" }
fastapi = { extras = ["standard"], version = "^0.116.1" }
nicegui = "^2.21.1"
python = ">=3.11,<3.14"
ruff = "^0.12.9"
uvicorn = "^0.35.0"
watchgod = "^0.8.2"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
